# bionorm

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  noxfile.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt
bionorm/: Detector.py  __init__.py  __version__.py  attributes.py  busco_normalizer.py  cli.py  common.py  consistency.py  detector.py  extract_fasta.py  generate_readme.py  helper.py  index.py  installer.py  metadata.py  metrics.py  normalizer.py  prefix.py  specification_checks.py
detect_incongruencies/: detector  normalizer
detect_incongruencies/incongruency_detector/normalizer_modes/: busco_normalizer.py  extract_fasta.py  prefix.py
templates/: DS.gitignore
tests/: 0cli_test.py  1prefixing_test.py  2extraction_test.py  3consistency_test.py  3indexing_test.py  4attributes_test.py  4consistency_test.py  5consistency_test.py  cli_test.py  common.py  conftest.py  counters.py  download_files.py  example_jemalong.fna  example_jemalong.gff3  extraction_test.py  prefixing_test.py  test_bionorm.py  test_formatting.py  test_prefixing.py
