[tool.poetry]
name = "bionorm"
version = "0.1.0"
description = ""
authors = ["Joel Berendzen <joel@ncgr.org>", "Connor Cameron <ctc@ncgr.org>"]

[tool.poetry.dependencies]
python = "^3.7"
biopython = "^1.76"
click = "^7.0"
"ruamel.yaml" = "^0.16.6"
sequencetools = "^0.0.5"
coverage = "^5.0.3"
importlib_metadata = "^1.5.0"
click_plugins = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bionorm = "bionorm:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
